--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=yourpassword
-DB_NAME=planvo
-JWT_SECRET=your_jwt_secret
-PORT=5000
+DB_HOST=79qgub.h.filess.io
+DB_PORT=3305
+DB_USER=planvo_perhapslaw
+DB_PASS=56b5f50c6c120da8a45a4ad2e21004d1138f9633
+DB_NAME=planvo_perhapslaw
