--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=79qgub.h.filess.io
-DB_USER=planvo_perhapslaw
-DB_PASSWORD=56b5f50c6c120da8a45a4ad2e21004d1138f9633
-DB_NAME=planvo_perhapslaw
-DB_PORT=3305
+DB_HOST=dpg-d2tago6uk2gs73cmeum0-a
+DB_PORT=5432
+DB_USER=planvo_gg_user
+DB_PASS=35WADbBNcGsgf1TMvDON6Kos1Vga7Joe
+DB_NAME=planvo_gg
