--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
-DB_HOST=dpg-d2tago6uk2gs73cmeum0-a
+# Neon DB connection
+DB_HOST=ep-bold-glade-a119akmy-pooler.ap-southeast-1.aws.neon.tech
 DB_PORT=5432
-DB_USER=planvo_gg_user
-DB_PASS=35WADbBNcGsgf1TMvDON6Kos1Vga7Joe
-DB_NAME=planvo_gg
+DB_USER=app_user               # dedicated app role, NOT neondb_owner
+DB_PASS=SuperSecurePassword123!  # strong password for the app role
+DB_NAME=neondb
+
+# Pooling configuration
+DB_MAX_CONNECTIONS=10
+DB_IDLE_TIMEOUT=30000          # 30 seconds
+DB_CONN_TIMEOUT=5000           # 5 seconds
