--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ DB_NAME=neondb
 DB_MAX_CONNECTIONS=10
 DB_IDLE_TIMEOUT=30000          # 30 seconds
 DB_CONN_TIMEOUT=5000           # 5 seconds
+JWT_SECRET=your_super_secret_key_here
+JWT_EXPIRES_IN=1h
