--- a/.env
+++ b/.env
@@ -1,13 +1,12 @@
-# Neon DB connection
-DB_HOST=ep-bold-glade-a119akmy-pooler.ap-southeast-1.aws.neon.tech
+DB_HOST=localhost
 DB_PORT=5432
-DB_USER=app_user               # dedicated app role, NOT neondb_owner
-DB_PASS=SuperSecurePassword123!  # strong password for the app role
+DB_USER=app_user
+DB_PASS=SuperSecurePassword123!
 DB_NAME=neondb
 
-# Pooling configuration
 DB_MAX_CONNECTIONS=10
-DB_IDLE_TIMEOUT=30000          # 30 seconds
-DB_CONN_TIMEOUT=5000           # 5 seconds
+DB_IDLE_TIMEOUT=30000
+DB_CONN_TIMEOUT=5000
+
 JWT_SECRET=your_super_secret_key_here
 JWT_EXPIRES_IN=1h
